# examples

./: .gitignore  LICENSE  README.md  requirements.txt
mnist_conv/: README.md  mnist.py  requirements.txt  utils.py  vit_mnist.py
mstar_classification/: README.md  model.py  requirements.txt  train.py  utils.py
mstar_resnet/: README.md  mstar.py  requirements.txt
nir_cinejense/: README.md  nir_miccai2023.py  requirements.txt  run_trainings.sh
polsf_unet/: README.md  pyproject.toml
polsf_unet/configs/: config.yml
polsf_unet/src/torchtmpl/: data.py  losses.py  main.py  optim.py  visualization.py
polsf_unet/src/torchtmpl/models/: __init__.py  model.py  parts.py
polsf_unet/torchtmpl/: main.py  optim.py  utils.py
